--- a/src/components/post/PostList/PostList.module.css
+++ b/src/components/post/PostList/PostList.module.css
@@ -65,3 +65,18 @@
     border-radius: 0.5em;
     border: 1px solid;
 }
+
+.error {
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.1);
+    padding: 50px;
+    border-radius: 0.5em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 1000px;
+    margin-top: 100px;
+    text-align: center;
+    font-size: 20px;
+}
