--- a/src/components/Root.module.css
+++ b/src/components/Root.module.css
@@ -7,6 +7,9 @@
     justify-content: center;
     align-items: center;
     font-size: 30px;
+    position: fixed;
+    top: 0;
+    z-index: 1;
 }
 
 .navBar ul{
