--- a/src/components/Root.module.css
+++ b/src/components/Root.module.css
@@ -14,6 +14,11 @@
 
 .navBar ul{
     list-style: none;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .navBar a{
@@ -23,14 +28,13 @@
 
 .profileIcon {
     color: white;
-    position: absolute;
-    right: 90px;
     cursor:pointer;
     transition: 0.1s all linear;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    margin-right: 60px;
 }
 
 .profileIcon p{
@@ -43,3 +47,18 @@
     transition: 0.1s all linear;
 }
 
+.homeIcon {
+    color: white;
+    cursor:pointer;
+    transition: 0.1s all linear;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-left: 50px;
+}
+
+.homeIcon:hover{
+    transform: scale(1.1);
+    transition: 0.1s all linear;
+}
