--- a/src/components/Root.module.css
+++ b/src/components/Root.module.css
@@ -1,4 +1,4 @@
-.navBar {
+.header, .navBar {
     background-color: black;
     margin: 0px;
     height: 75px;
@@ -62,3 +62,41 @@
     transform: scale(1.1);
     transition: 0.1s all linear;
 }
+
+.footer{
+    background-color: rgb(243, 220, 185);
+    margin: 0px;
+    height: 75px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    bottom: 0;
+}
+
+.footer p{
+    font-size: 15px;
+    margin: 0;
+}
+
+.sectionEmail, .sectionPhone{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: 0.1s all linear;
+}
+
+.sectionEmail:hover, .sectionPhone:hover{
+    transform: scale(1.02);
+    transition: 0.1s all linear;
+}
+
+.emailIcon, .phoneIcon{
+    margin-right: 5px;
+}
+
+
