--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,15 @@ body {
   margin: 0;
 }
 
+/* html, body {
+  height: 100%;
+  margin: 0;
+} */
+
 #root{
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  min-height: 100vh;
 }
