--- a/src/components/admin/post/PostDetail/PostDetail.module.css
+++ b/src/components/admin/post/PostDetail/PostDetail.module.css
@@ -8,7 +8,6 @@
     justify-content: center;
     align-items: center;
     width: 1000px;
-    margin-top: 100px;
     text-align: center;
     position: relative;
 }
@@ -104,4 +103,25 @@
     transition: 0.1s all linear;
     background-color: rgb(236, 208, 164);
     cursor: pointer;
+}
+
+@media (max-width: 1400px) {
+    .postDetail {
+        width: 750px;
+        margin-bottom: 100px;
+        margin-top: 100px;
+    }
+    
+    .postDetail img {
+        object-fit: contain;
+        height: 300px;
+    }
+    
+    .postDetail p{
+        font-size: 17px;
+    }
+
+    .title{
+        font-size: 25px;
+    }
 }
