--- a/src/components/admin/post/PostCreate/PostCreate.module.css
+++ b/src/components/admin/post/PostCreate/PostCreate.module.css
@@ -8,7 +8,6 @@
     justify-content: center;
     align-items: center;
     width: 1000px;
-    margin-top: 100px;
     text-align: center;
     position: relative;
 }
@@ -73,4 +72,13 @@
 .error {
     color: red;
     margin-top: 15px;
+}
+
+@media (max-width: 1400px) {
+    .postCreate {
+        width: 750px;
+        padding: 30px;
+        margin-top: 100px;
+    }
+    
 }
