--- a/src/components/auth/Register/Register.module.css
+++ b/src/components/auth/Register/Register.module.css
@@ -52,3 +52,12 @@
     margin-top: 20px;
     font-size: 18px;
 }
+
+@media (max-width: 1400px) {
+    .registerForm {
+        width: 400px;
+        height: 380px;
+        padding: 30px;
+    }
+    
+}
