--- a/src/components/auth/Login/Login.module.css
+++ b/src/components/auth/Login/Login.module.css
@@ -69,3 +69,27 @@
     background-color: rgb(236, 208, 164);
     cursor: pointer;
 }
+
+.linkLoginAdmin{
+    text-decoration: none;
+    color: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    width: 120px;
+    height: 40px;
+    border: none; 
+    border-radius: 0.5em;
+    font-size: 15px;
+    background-color: rgb(243, 220, 185);
+    transition: 0.1s all linear;
+    text-align: center;
+}
+
+.linkLoginAdmin:hover {
+    transform: scale(1.05);
+    transition: 0.1s all linear;
+    background-color: rgb(236, 208, 164);
+    cursor: pointer;
+}
