--- a/src/components/admin/post/PostList/PostList.module.css
+++ b/src/components/admin/post/PostList/PostList.module.css
@@ -3,7 +3,8 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-top: 80px;
+    position: absolute;
+    top: 100px;
 }
 
 .postList{
