--- a/src/components/admin/post/PostEdit/PostEdit.module.css
+++ b/src/components/admin/post/PostEdit/PostEdit.module.css
@@ -39,6 +39,7 @@
     margin-left: 20px;
     border-radius: 0.5em;
     border: 1px solid;
+    font-family: "Gothic A1", sans-serif;
 }
 
 .section input{
@@ -61,6 +62,7 @@
     transition: 0.1s all linear;
     cursor: pointer;
     margin-top: 20px;
+    font-family: "Gothic A1", sans-serif;
 }
 
 .editForm button:hover {
