--- a/src/components/user/auth/Register/Register.module.css
+++ b/src/components/user/auth/Register/Register.module.css
@@ -22,6 +22,7 @@
     margin-bottom: 20px;
     width: 200px;
     height: 30px;
+    font-family: "Gothic A1", sans-serif;
 }
 
 .registerForm button {
@@ -33,6 +34,7 @@
     background-color: rgb(243, 220, 185);
     transition: 0.1s all linear;
     margin-top: 20px;
+    font-family: "Gothic A1", sans-serif;
 }
 
 .registerForm button:hover {
