--- a/src/components/user/post/PostList/PostList.module.css
+++ b/src/components/user/post/PostList/PostList.module.css
@@ -65,6 +65,7 @@
     margin-left: 10px;
     border-radius: 0.5em;
     border: 1px solid;
+    font-family: "Gothic A1", sans-serif;
 }
 
 .error {
