--- a/src/components/admin/auth/Login/Login.module.css
+++ b/src/components/admin/auth/Login/Login.module.css
@@ -23,6 +23,7 @@
     margin-bottom: 20px;
     width: 200px;
     height: 30px;
+    font-family: "Gothic A1", sans-serif;
 }
 
 .loginForm button {
@@ -34,6 +35,7 @@
     background-color: rgb(243, 220, 185);
     transition: 0.1s all linear;
     cursor: pointer;
+    font-family: "Gothic A1", sans-serif;
 }
 
 .loginForm button:hover {
